--- a/.github/workflows/deploy-ECR.yml
+++ b/.github/workflows/deploy-ECR.yml
@@ -1,25 +1,32 @@
-name: CI/CD Pipeline - Build & Deploy to EC2
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
-      - main  # Runs when code is pushed to main
+      - main  # Runs when code is pushed to 'main' branch
 
 env:
-  AWS_REGION: eu-north-1
+  AWS_REGION: "eu-north-1"
   AWS_ACCOUNT_ID: "490004653145"
-  ECR_REPO: "490004653145.dkr.ecr.eu-north-1.amazonaws.com/hello-node-app"
+  ECR_REPO: "hello-node-app"
+  IMAGE_NAME: "${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}"
+  CONTAINER_PORT: 8000
+  HOST_PORT: 8000
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      - name: Set Up AWS CLI
+        run: |
+          sudo apt-get update && sudo apt-get install -y awscli
+
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -27,48 +34,43 @@ jobs:
 
       - name: Login to AWS ECR
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE_NAME
 
       - name: Build Docker Image
         run: |
-          docker build -t hello-node-app .
-          docker tag hello-node-app:latest $ECR_REPO:latest
+          docker build -t $ECR_REPO .
+          docker tag $ECR_REPO:latest $IMAGE_NAME:latest
 
-      - name: Push Image to AWS ECR
+      - name: Push Docker Image to AWS ECR
         run: |
-          docker push $ECR_REPO:latest
+          docker push $IMAGE_NAME:latest
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
       - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
+        run: |
+          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
+          chmod 600 private_key.pem
+          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << 'EOF'
+            
             echo "Connected to EC2"
 
-            # Authenticate EC2 with AWS ECR
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO
+            # Authenticate EC2 instance with AWS ECR
+            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE_NAME
 
-            # Stop and remove old container if running
-            OLD_CONTAINER_ID=$(docker ps -q --filter "ancestor=$ECR_REPO:latest")
+            # Stop and remove old container
+            OLD_CONTAINER_ID=$(docker ps -q --filter "ancestor=$IMAGE_NAME:latest")
             if [ -n "$OLD_CONTAINER_ID" ]; then
                 echo "Stopping and removing old container..."
                 docker stop $OLD_CONTAINER_ID && docker rm $OLD_CONTAINER_ID
-            else
-                echo "No running container found for $ECR_REPO:latest"
             fi
 
-            # Pull latest image and start new container
-            echo "Pulling latest image from AWS ECR..."
-            docker pull $ECR_REPO:latest
+            # Pull latest image
+            docker pull $IMAGE_NAME:latest
 
-            echo "Starting new container..."
-            docker run -d -p 8000:8000 $ECR_REPO:latest
+            # Run new container
+            docker run -d -p $HOST_PORT:$CONTAINER_PORT $IMAGE_NAME:latest
 
-            echo "Deployment completed successfully"
+            echo "Deployment Completed Successfully!"
+          
+
+      - name: Cleanup
+        run: rm -f private_key.pem
