--- a/.github/workflows/deploy-ECR.yml
+++ b/.github/workflows/deploy-ECR.yml
@@ -1,31 +1,25 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline - Build & Deploy to EC2
 
 on:
   push:
     branches:
-      - main  # Runs when code is pushed to 'main' branch
+      - main  # Runs when code is pushed to main
 
 env:
-  AWS_REGION: "eu-north-1"
+  AWS_REGION: eu-north-1
   AWS_ACCOUNT_ID: "490004653145"
-  ECR_REPO: "hello-node-app"
-  CONTAINER_PORT: 8000
-  HOST_PORT: 8000
+  ECR_REPO: "490004653145.dkr.ecr.eu-north-1.amazonaws.com/hello-node-app"
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      - name: Set Up AWS CLI
-        run: |
-          sudo apt-get update && sudo apt-get install -y awscli
-
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v4
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -33,47 +27,48 @@ jobs:
 
       - name: Login to AWS ECR
         run: |
-          IMAGE_NAME="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}"
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE_NAME
+          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO
 
       - name: Build Docker Image
         run: |
-          IMAGE_NAME="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}"
-          docker build -t $ECR_REPO .
-          docker tag $ECR_REPO:latest $IMAGE_NAME:latest
+          docker build -t hello-node-app .
+          docker tag hello-node-app:latest $ECR_REPO:latest
 
-      - name: Push Docker Image to AWS ECR
+      - name: Push Image to AWS ECR
         run: |
-          IMAGE_NAME="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}"
-          docker push $IMAGE_NAME:latest
+          docker push $ECR_REPO:latest
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Deploy to EC2
-        run: |
-          IMAGE_NAME="${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com/${{ env.ECR_REPO }}"
-          echo "${{ secrets.EC2_SSH_KEY }}" > private_key.pem
-          chmod 600 private_key.pem
-          ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
-            
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
             echo "Connected to EC2"
 
-            # Authenticate EC2 instance with AWS ECR
-            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE_NAME
+            # Authenticate EC2 with AWS ECR
+            aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_REPO
 
-            # Stop and remove old container
-            OLD_CONTAINER_ID=\$(docker ps -q --filter "ancestor=$IMAGE_NAME:latest")
-            if [ -n "\$OLD_CONTAINER_ID" ]; then
+            # Stop and remove old container if running
+            OLD_CONTAINER_ID=$(docker ps -q --filter "ancestor=$ECR_REPO:latest")
+            if [ -n "$OLD_CONTAINER_ID" ]; then
                 echo "Stopping and removing old container..."
-                docker stop \$OLD_CONTAINER_ID && docker rm \$OLD_CONTAINER_ID
+                docker stop $OLD_CONTAINER_ID && docker rm $OLD_CONTAINER_ID
+            else
+                echo "No running container found for $ECR_REPO:latest"
             fi
 
-            # Pull latest image
-            docker pull $IMAGE_NAME:latest
+            # Pull latest image and start new container
+            echo "Pulling latest image from AWS ECR..."
+            docker pull $ECR_REPO:latest
 
-            # Run new container
-            docker run -d -p $HOST_PORT:$CONTAINER_PORT $IMAGE_NAME:latest
+            echo "Starting new container..."
+            docker run -d -p 8000:8000 $ECR_REPO:latest
 
-            echo "Deployment Completed Successfully!"
-        
-
-      - name: Cleanup
-        run: rm -f private_key.pem
+            echo "Deployment completed successfully"
